fixed bug / updated position of logo on smaller viewport heights

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -126,6 +126,9 @@
   .home-details p{
     font-size:3.8vh !important;
   }
+  .aside-section #logo {
+    top:20px !important;
+  }
   .aside-section #logo a{
     font-size:5.5vh !important;
   }
